--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Locação de Veículos"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:GAT6ONCoHTJKig3uJrGXTtEXfK9+yKpZV7zgSiueub0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=test_britvic
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=c804f178cf1dd3
+MAIL_PASSWORD=477a540ea884f4
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=erickfirmo1996@gmail
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
